@@ -53,6 +53,9 @@ application.
 \fB\-\-functions\fP (\fB\-f\fP)
 Only dump functions definitions.
 .TP
+\fB\-\-table=\fP\fItable\fP (\fB\-t\fP \fItable\fP)
+Only dump the specified \fItable\fP.
+.TP
 \fB\-\-quiet\fP (\fB\-q\fP)
 Don't print the welcome message.
 .TP
